Fix app on Safari + iOS Safari
- Added some missing `flex: 1` and made the whole body 100vw/vh
- Making use of `numberOfLines` & `ellipsizeMode` props on `<Text>`
- Making Arrivals full width in order to have space for double-digit arrival time
- Salmon routes omit + if it's 0 time
- PageStructure.styles.web should be using HTML & CSS directly since it's web-specific

--- a/app/index.scss
+++ b/app/index.scss
@@ -3,5 +3,13 @@ body {
     -webkit-font-smoothing: antialiased;
     color: #212121;
     font-family: "Helvetica Neue", "Calibri Light", Roboto, sans-serif;
+    height: 100vh;
     letter-spacing: 0.02em;
+    width: 100vw;
+}
+
+#app {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
